--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "@actions/core": "^1.10.0",
     "@actions/exec": "^1.1.1",
     "@actions/github": "^5.1.1",
-    "@actions/io": "^1.1.2"
+    "@actions/io": "^1.1.2",
+    "http-cache-semantics": "^4.1.1",
+    "json5": "^2.2.3"
   },
   "devDependencies": {
     "@types/jest": "^27.0.2",
